kubernetes/applications/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: ai
spec:
  type: ClusterIP
  selector:
    app: searxng
  ports:
    - name: http
      port: 80
      targetPort: http
